# colregs-vault

./: README.md  manifest.yaml  pyproject.toml  regime-polygons.geojson  requirements.yaml  sightings.yaml
.github/workflows/: ci.yml
audit/: __init__.py  __main__.py  bench.py  checks.py  jury.py  models.py  models.yaml  refs.py  regression-corpus.yaml  report.py
audit/reports/: 2026-07-13.md  2026-07-14.md
rules/canadian/: PENDING.txt  annex-1.md  annex-2.md  annex-3.md  annex-4.md  rule-01.md  rule-02.md  rule-03.md  rule-04.md  rule-05.md  rule-06.md  rule-07.md  rule-08.md  rule-09.md  rule-10.md  rule-11.md  rule-12.md  rule-13.md  rule-14.md  rule-15.md  rule-16.md  rule-17.md  rule-18.md  rule-19.md  rule-20.md  rule-21.md  rule-22.md  rule-23.md  rule-24.md  rule-25.md  rule-26.md  rule-27.md  rule-28.md  rule-29.md  rule-30.md  rule-31.md  rule-32.md  rule-33.md  rule-34.md  rule-35.md  (+11 more)
rules/inland/: PENDING.txt  annex-1.md  annex-2.md  annex-3.md  annex-4.md  annex-5.md  rule-01.md  rule-02.md  rule-03.md  rule-04.md  rule-05.md  rule-06.md  rule-07.md  rule-08.md  rule-09.md  rule-10.md  rule-11.md  (+27 more)
scripts/: build_vault.py
sources/: ecfr-title33-part83.xml  ecfr-title33-part84.xml  ecfr-title33-part85.xml  ecfr-title33-part86.xml  ecfr-title33-part87.xml  ecfr-title33-part88.xml  justice-crc-1416.xml  meta.yaml
tests/: test_audit_bench.py  test_audit_checks.py  test_audit_jury.py  test_audit_models.py  test_audit_refs.py  test_audit_report.py  test_data_files.py  test_ecfr.py  test_handbook.py  test_justice.py  test_model.py  test_validate.py
(+53 files in other folders)
