[project]
name = "colregs-vault-build"
version = "0.1.0"
description = "Deterministic build tooling for the colregs vault (not published)"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "pyyaml>=6"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]

[tool.uv]
package = false
